# Cabinet-Agent

./: .env.example  README.md  app.py  dental.db  pyproject.toml  requirements.txt
app/: __init__.py  mail.py  models.py  routes.py
scripts/: fetch_vendor.py
static/css/: styles.css
static/js/: calendar.js
templates/: base.html  calendar.html  doctors.html  patients.html
